# dlt-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  dev-requirements.txt  justfile  pyproject.toml  requirements.txt
chess_vanilla/: chess_pipeline.py
chess_vanilla/.dlt/: .sources
chess_vanilla/chess/: __init__.py
src/: archives.rs  client.rs  games.rs  ingestors.rs  lib.rs  profiles.rs  records.rs  sample_payload.py
src/dlt_rust/: __init__.py  _core.pyi
