[package]
name = "dlt_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["abi3-py39", "extension-module"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
