[package]
name = "dlt_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "54.2.0", features = ["pyarrow"] }
arrow-array = "54.2.0"
arrow-json = "54.2.0"
arrow-schema = "54.2.0"
eserde = { version = "0.1.2", features = ["json"] }
pyo3 = { version = "0.23.4", features = ["abi3-py39", "extension-module"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = "1.0.218"
serde_json = "1.0.139"
